fix: adjust header layout and styles for improved alignment and responsiveness

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -53,13 +53,14 @@ a:active {
   width: 100%;
   height: 100%;
   display: flex;
-  align-items: end;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 32px;
 }
 
 .logo-img {
   width: 120px;
   height: auto;
-  margin-right: 12px;
 }
 
 .right-header {
@@ -75,7 +76,7 @@ a:active {
 
 @media (max-width: 760px) {
   section {
-    padding: 10px 20px;
+    padding: 20px;
   }
 
   nav {
@@ -103,22 +104,28 @@ a:active {
   header {
     height: 120px;
   }
+
   section {
     flex-direction: column-reverse;
-    padding: 10px 10px;
+    padding: 14px;
   }
+
   h1 {
     font-size: 24px;
   }
+
   .logo-img {
     width: 80px;
   }
+
   .left-header {
     width: 100%;
   }
+
   .right-header {
     width: 100%;
   }
+
   .right-header a {
     font-size: 14px;
   }
